fix overflow problems

--- a/src/app.css
+++ b/src/app.css
@@ -15,11 +15,6 @@
 }
 
 body {
-	min-height: 100vh;
-	display: flex;
-	justify-content: center;
-	flex-direction: column;
-	align-items: center;
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 	background-color: var(--bg-color);
 	color: var(--font-color);
